# embsys

./: .deploy.sh  .gitignore  .travis.yml  README.md  build.sh
cmake/: CMakeLists.txt  toolchain.cmake
cmake/arm/: CMakeLists.txt
cmake/x86/: CMakeLists.txt
include/camera/: camera.h  config.h  image.h
include/network/: api.h  network.h
include/utils/: led.h  utils.h
src/camera/: CMakeLists.txt  camera.c  image.c
src/client/: CMakeLists.txt  main.c
src/network/: CMakeLists.txt  api.c  network.c
src/server/: CMakeLists.txt  daemon.c  main.c
src/utils/: CMakeLists.txt  led.c  utils.c
